--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -14,10 +14,12 @@ sites:
 #    url: https://en.wikipedia.org
 #  - name: Hacker News
 #    url: https://news.ycombinator.com
-  - name: Broken Site
-    url: https://thissitedoesnotexist.com
-#  - name: Secret Site
-#    url: $SECRET_SITE
+#  - name: Broken Site
+#    url: https://thissitedoesnotexist.com
+  - name: Teknisk Dokumentation
+    url: $SECRET_SITE_1
+  - name: Ärendehantering
+    url: $SECRET_SITE_2
 
 status-website:
   # Add your custom domain below, or remove the next line if you don't have a domain
