--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -18,7 +18,7 @@ sites:
 #    url: https://thissitedoesnotexist.com
   - name: Teknisk Dokumentation
     url: $SECRET_SITE_1
-  - name: Ärendehantering
+  - name: &Auml;rendehantering
     url: $SECRET_SITE_2
 
 status-website:
@@ -29,7 +29,8 @@ status-website:
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
   name: Uppe eller nere?
   introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage: This is a sample status page which uses **real-time** data from our [Github repository](https://github.com/koj-co/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/koj-co/upptime)
+  introMessage: This is a test I did to see if this could be a useful way of showing status for stuff ...
+  # This is a sample status page which uses **real-time** data from our [Github repository](https://github.com/koj-co/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/koj-co/upptime)
   navbar:
     - title: Status
       href: /
